--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
 
     // Facebook Android SDK (everything)
     compile 'com.facebook.android:facebook-android-sdk:4.+'
+
+    //Picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
